--- a/index.html
+++ b/index.html
@@ -18,46 +18,28 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, repellendus veniam quis aperiam provident illum! Vitae ipsam, maxime suscipit dignissimos eius architecto, necessitatibus ad doloribus quod error, deleniti natus vel!</p>
 
-    <pre>
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-        -------------------------------------------------
-    </pre>
+    <ol>
+        <li>Film</li>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0118929/">Dark City</a></li>
+            <li>Floor 13</li>
+            <li>Solaris</li>
+        </ul>
+        <li>Dizi</li>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0303461/">Firefly</a></li>
+            <li>Star Trek</li>
+            <li>Bizimkiler</li>
+        </ul>
+        <li>Kitap</li>
+        <ul>
+            <li><a href="https://www.goodreads.com/book/show/44159012-safsatalar">Safsatalar</a></li>
+            <li>Mercan Adası</li>
+            <li>Otostopçunun Galaksi Rehberi</li>
+        </ul>
+    </ol>
+    <img src="kanizsa_triangle_black.png" alt="Kanizsa Triangle" width="25%">
+    <br>
     <a name="sayfasonu"></a>
     <a href="#sayfabasi">Yukarı git</a>
 </body>
