--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site</title>
 </head>
 <body>
     <!--Başlık-->
     <h1>Toygar Aksoy</h1>
     <!--Link-->
+
+    
+    <!--Header - Start-->
+    <header>
+        <nav>
     <a name="sayfabasi"></a>
     <a href="#sayfasonu">Sayfa sonuna git</a>
-    <!--Alt başlık-->
-    <h2>Hakkımda</h2>
-    <!--Yazı-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, repellendus veniam quis aperiam provident illum! Vitae ipsam, maxime suscipit dignissimos eius architecto, necessitatibus ad doloribus quod error, deleniti natus vel!</p>
+            <ul>
+                <li><a href="index.html">Anasayfa</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--Header - End-->
+
+    <!--Content - Start-->
+    <section>
+
+    <article>
+        <!--Alt başlık-->
+        <h2>Hakkımda</h2>
+        <!--Yazı-->
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, fuga.</p>
+        <p>Cum adipisci voluptates iure error, molestiae quasi similique placeat? Ipsa.</p>
+    </article>
+    
 
     <ol>
         <li>Film</li>
@@ -38,9 +58,24 @@
             <li>Otostopçunun Galaksi Rehberi</li>
         </ul>
     </ol>
-    <img src="kanizsa_triangle_black.png" alt="Kanizsa Triangle" width="25%">
+    <img src="https://picsum.photos/id/337/200/300" alt="Kanizsa Triangle" width="25%">
     <br>
+    </section>
+    <!--Content - End-->
+
+
+    <!--Footer - Start-->
+    <footer>
+        <nav>
     <a name="sayfasonu"></a>
     <a href="#sayfabasi">Yukarı git</a>
+            <ul>
+                <li><a href="index.html">Anasayfa</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
+    <!--Footer - End-->
 </body>
 </html>
