Site prepared without any css

--- a/css/odev1/index.html
+++ b/css/odev1/index.html
@@ -5,9 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>css Ödevi</title>
+    <title>css Ödev 1</title>
 </head>
 <body>
-    Merhaba Dünya!
+    <!--navbar-start-->
+    <nav>
+        <a name="sayfabasi"></a>
+        <a href="index.html">Anasayfa</a>
+        <a href="yazilar.html">Yazılar</a>
+        <a href="contact.html">Bağlantı</a>
+    </nav>
+    <!--navbar-end-->
+    <!--content-start-->
+    <section>
+        <h1>CSS Ödevi</h1>
+        <article>
+            <h3>İlk paragraf</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, consequuntur.</p>
+            <img src="https://picsum.photos/id/186/200/300" alt="Random pictur">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, eos.</p>
+        </article>
+        <article>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </article>
+        <article>
+            <img src="https://picsum.photos/id/76/200/300" alt="Random pictur">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Impedit minus reprehenderit tempora laborum?</p>
+        </article>
+        <article>
+            <img src="https://picsum.photos/id/985/200/300" alt="Random pictur">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Atque quis cupiditate molestiae ad?</p>
+        </article>
+    </section>
+    <!--content-end-->
+    <!--footer-start-->
+    <footer>
+        <a href="#sayfabasi">Başa dön</a>
+        <a href="index.html">Anasayfa</a>
+        <a href="yazilar.html">Yazılar</a>
+        <a href="contact.html">Bağlantı</a>
+    </footer>
+    <!--footer-end-->
 </body>
 </html>
