css odev 1 tamamlandı

--- a/css/odev1/contact.html
+++ b/css/odev1/contact.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <!--navbar-start-->
+        <h1>Bağlantı</h1>
     <nav>
+        <ul>
         <a name="sayfabasi"></a>
-        <a href="index.html">Anasayfa</a>
-        <a href="yazilar.html">Yazılar</a>
-        <a href="contact.html">Bağlantı</a>
+        <li><a href="index.html">Anasayfa</a></li>
+        <li><a href="yazilar.html">Yazılar</a></li>
+        <li><a href="contact.html">Bağlantı</a></li>
+        </ul>
     </nav>
     <!--navbar-end--> 
     <!--content-start-->
