--- a/css/odev1/index.html
+++ b/css/odev1/index.html
@@ -9,31 +9,34 @@
 </head>
 <body>
     <!--navbar-start-->
+   <h1>CSS Ödev 1</h1>
     <nav>
+        <ul>
         <a name="sayfabasi"></a>
-        <a href="index.html">Anasayfa</a>
-        <a href="yazilar.html">Yazılar</a>
-        <a href="contact.html">Bağlantı</a>
+        <li><a href="index.html">Anasayfa</a></li>
+        <li><a href="yazilar.html">Yazılar</a></li>
+        <li><a href="contact.html">Bağlantı</a></li>
+        </ul>
     </nav>
     <!--navbar-end-->
     <!--content-start-->
     <section>
-        <h1>CSS Ödevi</h1>
+        
         <article>
-            <h3>İlk paragraf</h3>
+            <h3>Paragraf 1</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, consequuntur.</p>
             <img src="https://picsum.photos/id/186/200/300" alt="Random pictur">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, eos.</p>
-        </article>
-        <article>
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
         <article>
+            <h3>Paragraf 2</h3>
             <img src="https://picsum.photos/id/76/200/300" alt="Random pictur">
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Impedit minus reprehenderit tempora laborum?</p>
         </article>
         <article>
+            <h3>Paragraf 3</h3>
             <img src="https://picsum.photos/id/985/200/300" alt="Random pictur">
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Atque quis cupiditate molestiae ad?</p>
