--- a/css/odev1/yazilar.html
+++ b/css/odev1/yazilar.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <!--navbar-start-->
+        <h1>Yazılar</h1>
     <nav>
-        <a name="sayfabasi"></a>
-        <a href="index.html">Anasayfa</a>
-        <a href="yazilar.html">Yazılar</a>
-        <a href="contact.html">Bağlantı</a>
+        <ul>
+            <a name="sayfabasi"></a>
+            <li><a href="index.html">Anasayfa</a></li>
+            <li><a href="yazilar.html">Yazılar</a></li>
+            <li><a href="contact.html">Bağlantı</a></li>
+        </ul>
     </nav>
     <!--navbar-end-->
     <!--content-start-->
     <section>
-        <h3>Yazılar</h3>
         <article>
             <h5>Başlık 1</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
@@ -63,10 +65,12 @@
     <!--content-end-->
     <!--footer-start-->
     <footer>
-        <a href="#sayfabasi">Başa dön</a>
-        <a href="index.html">Anasayfa</a>
-        <a href="yazilar.html">Yazılar</a>
-        <a href="contact.html">Bağlantı</a>
+        <ul>
+            <li><a href="index.html">Anasayfa</a></li>
+            <li><a href="yazilar.html">Yazılar</a></li>
+            <li><a href="contact.html">Bağlantı</a></li>
+            <li style="float:right"><a href="#sayfabasi">Başa dön</a></li>
+        </ul>
     </footer>
     <!--footer-end-->
 </body>
